<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Currency Converter App"
        android:gravity="center_horizontal"
        android:paddingBottom="50dp"
        android:textSize="@dimen/font_medium"
        android:typeface="serif"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="40dp"
        />
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <TextView
        android:id="@+id/dollar_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar_lbl"
        android:gravity="center_horizontal"
        android:textSize="60px"
        android:layout_marginBottom="46dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="46dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_lbl"
        android:gravity="center_horizontal"
        android:textSize="60px"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="46dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        />
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="116dp"
        />
</RelativeLayout>
    <Button
        android:id="@+id/proceed"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/proceed"
        android:onClick="convert"
        android:background="@color/green"
        android:textColor="@color/black"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/close"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/close"
        android:layout_marginTop="16dp"
        android:onClick="close"
        android:background="@color/red"
        android:textColor="@color/black"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:layout_marginLeft="10dp">
        <!--<TextView
        android:id="@+id/converted1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converted1"
        android:gravity="center_horizontal"
        android:textSize="40px"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/get1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" amount "
        android:gravity="center_horizontal"
        android:textSize="40px"
        android:textColor="@color/black"
        android:layout_toRightOf="@id/converted1"
        />
    <TextView
        android:id="@+id/converted2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converted2"
        android:gravity="center_horizontal"
        android:textSize="40px"
        android:textColor="@color/black"
        android:layout_toRightOf="@id/get1"
        />
    <TextView
        android:id="@+id/con_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" 000"
        android:gravity="center_horizontal"
        android:textSize="40px"
        android:textColor="@color/black"
        android:layout_toRightOf="@id/converted2"
        />-->
    <TextView
        android:id="@+id/get2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center_horizontal"
        android:textSize="40px"
        android:textColor="@color/black"
        />
    </RelativeLayout>
</LinearLayout>